--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,15 +4,12 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
+  - name: About Me
     url: '#about'
     weight: 10
   - name: Blog
-    url: '/post'
+    url: '/blog'
     weight: 20
-  - name: Resume
-    url: '/resume'
-    weight: 30
-  - name: Contact
-    url: '/contact'
-    weight: 40
+  # - name: Resumé
+  #   url: '/resume'
+  #   weight: 30
