--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,7 +5,7 @@
 
 # Appearance
 
-theme: minimal
+theme: Ocean
 day_night: false
 font: ''
 font_size: L
@@ -29,19 +29,19 @@ address:
   country: United States
   country_code: US
 coordinates:
-  latitude: '37.4275'
-  longitude: '-122.1697'
-directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
+  latitude: 
+  longitude:
+directions:
 
 
 # Site header
 
 main_menu:
   enable: true
-  align: l
-  show_logo: true
+  align: c
+  show_logo: false
   show_language: false
-  show_day_night: true
+  show_day_night: false
   show_search: false
   highlight_active_link: true
 
@@ -58,7 +58,7 @@ highlight_languages:
   - r
   - python
   - latex
-math: false
+math: true
 diagram: false
 privacy_pack: false
 edit_page:
@@ -90,7 +90,7 @@ abstract_length: 135
 plugins_js: []
 avatar:
   gravatar: false
-  shape: circle
+  shape: square
 publications:
   date_format: January 2006
   citation_style: apa
