--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -10,12 +10,12 @@ primary = "#003103"
 # Menu
 menu_primary = "#003103"
 menu_text = "#fff"
-menu_text_active = "#e1ad01"
+menu_text_active = "#fff"
 menu_title = "#fff"
 
 # Home sections
 home_section_odd = "rgb(255, 255, 255)"
 home_section_even = "rgb(247, 247, 247)"
 
-link = "#e1ad01"
-link_hover = "#e1ad01"
+link = "#b05449"
+link_hover = "#b05449"
