--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -8,7 +8,7 @@ light = true
 primary = "#003103"
 
 # Menu
-menu_primary = "#003103"
+menu_primary = "#09280a"
 menu_text = "#fff"
 menu_text_active = "#fff"
 menu_title = "#fff"
@@ -17,5 +17,5 @@ menu_title = "#fff"
 home_section_odd = "rgb(255, 255, 255)"
 home_section_even = "rgb(247, 247, 247)"
 
-link = "#b05449"
-link_hover = "#b05449"
+link = "#3f51b5"
+link_hover = "#3f51b5"
