--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,6 +10,6 @@ main:
   - name: Blog
     url: '/blog'
     weight: 20
-  - name: Resume
-    url: '/resume'
-    weight: 30
+  # - name: Resume
+  #   url: '/resume'
+  #   weight: 30
