--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,9 @@ main:
   - name: About Me
     url: '#about'
     weight: 10
-  # - name: Blog
-  #   url: '/post'
-  #   weight: 20
+  - name: Blog
+    url: '/blog'
+    weight: 20
   # - name: Resume
   #   url: '/resume'
   #   weight: 30
