--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,6 +10,9 @@ main:
   - name: Blog
     url: '/blog'
     weight: 20
+  # - name: Post
+  #   url: '/post'
+  #   weight: 20
   # - name: Resume
   #   url: '/resume'
   #   weight: 30
