--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '#about'
     weight: 10
   - name: Blog
-    url: '/blog'
+    url: '/post'
     weight: 20
   # - name: Post
   #   url: '/post'
